analyzed stats are now working

--- a/index.html
+++ b/index.html
@@ -1,36 +1,44 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width initial-scale=1.0'>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-    <style>
+<head>
+  <meta charset='utf-8'>
+  <meta name='viewport' content='width=device-width initial-scale=1.0'>
 
-      * {
-        margin: 0;
-        padding: 0;
-      }
+  <style>
 
-      body, html {
-        height: 100%;
-      }
+  * {
+    margin: 0;
+    padding: 0;
+  }
 
-      .flexbox-container{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100%;
-      }
-      
-      div.jumbotron {
-        margin-top: 25%;
-      }
+  body, html {
+    height: 100%;
+  }
 
-    </style>
-    <script src="public/bundle.js" defer></script>
-    <title>PuppyBook - A Puppy Social Network</title>
-  </head>
-  <body>
-    <div id="app">
+  .flexbox-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+
+  div.jumbotron {
+    margin-top: 10%;
+  }
+
+  </style>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+  <!-- Latest compiled and minified JavaScript -->
+  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
+  <script src="public/bundle.js" defer></script>
+  <title>Stat Cat</title>
+</head>
+<body>
+  <div id="app">
   </body>
-</html>
+  </html>
